Fixed wordwrapping and cdn for SSL

--- a/Internet Security/encryption-webapp/styles.sass
+++ b/Internet Security/encryption-webapp/styles.sass
@@ -11,6 +11,7 @@ body
   border: 2px solid #689F38
   font-size: 100%
   font-weight: 300
+  word-wrap: break-word
 
 .navbar-default
   background-image: linear-gradient(to bottom,#689F38 0,#8BC34A 100%)
